Add main menu with host and join options, need to test, fix where to travel after host session

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Devs/Vladimir/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/Devs/Octavio/BP_MainMenuGameMode.BP_MainMenuGameMode_C
+ServerDefaultMap=None
+TransitionMap=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -217,3 +220,4 @@ bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
