Added tutorial stuff and change the time it take to change the hud

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Devs/Vladimir/MainLevel.MainLevel
+GameDefaultMap=/Game/Devs/Octavio/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Devs/Octavio/BP_MainMenuGameMode.BP_MainMenuGameMode_C
 ServerDefaultMap=None
 TransitionMap=None
+EditorStartupMap=/Game/Devs/Octavio/MainMenu.MainMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
